--- a/docs/docs/lib/react.mdx
+++ b/docs/docs/lib/react.mdx
@@ -33,7 +33,7 @@ import { GrowthBook, GrowthBookProvider } from "@growthbook/growthbook-react";
 const gb = new GrowthBook({
   apiHost: "https://cdn.growthbook.io",
   clientKey: "sdk-abc123",
-  // Enable easier debugging of feature flags during development
+  // Enable easier debugging during development
   enableDevMode: true,
 });
 
