Switch CDN url in docs to jsdelivr instead of unpkg for better reliability

--- a/docs/docs/lib/js.mdx
+++ b/docs/docs/lib/js.mdx
@@ -23,10 +23,8 @@ npm install --save @growthbook/growthbook
 or use directly in your HTML without installing first:
 
 ```html
-<script type="module">
-  import { GrowthBook } from "https://unpkg.com/@growthbook/growthbook/dist/bundles/esm.min.js";
-  //...
-</script>
+<!-- Creates `window.growthbook` with all of the exported classes -->
+<script src="https://cdn.jsdelivr.net/npm/@growthbook/growthbook/dist/bundles/index.js"></script>
 ```
 
 ## Quick Usage
