Added GA4 documentation, and improved BigQuery guide

--- a/docs/docs/guide/index.mdx
+++ b/docs/docs/guide/index.mdx
@@ -20,6 +20,7 @@ The following sections contain detailed walk through on how to set up GrowthBook
 
 ## Tracking and analytics setup for common event trackers:
 
+- [Google Analytics - GA4](/guide/GA4-google-analytics)
 - [Google Analytics - UA](/guide/GA-universal-analytics)
 - [Mixpanel](/guide/mixpanel)
 - [Rudderstack](/guide/rudderstack)
@@ -27,7 +28,6 @@ The following sections contain detailed walk through on how to set up GrowthBook
 
 ## Coming soon:
 
-- Google Analytics - GA4
 - Jitsu
 - Snowplow
 - Amplitude
