--- a/docs/docs/guide/bigquery.mdx
+++ b/docs/docs/guide/bigquery.mdx
@@ -32,10 +32,9 @@ Create a service account name and account ID. On the next page you need to add 3
   style={{ width: 500, margin: "0 auto" }}
 />
 
-On the Grant page, add three (read only) permissions roles:
+On the Grant page, add two (read only) permissions roles:
 
 - BigQuery Data Viewer
-- BigQuery Metadata Viewer
 - BigQuery Job User
 
 <img
