--- a/docs/docs/guide/GA4-google-analytics.mdx
+++ b/docs/docs/guide/GA4-google-analytics.mdx
@@ -7,11 +7,8 @@ slug: GA4-google-analytics
 
 # Configuring GrowthBook to work with Google Analytics - GA4
 
-:::info
-
-GrowthBook connects to Google Analytics (GA4) via BigQuery. You can find Google's documentation on how to create this link [here](https://support.google.com/analytics/answer/9823238).
-
-:::
+GrowthBook connects to Google Analytics (GA4) via BigQuery. This process is straight forward, and outlined below.
+You can also find Google's documentation on how to create this link [here](https://support.google.com/analytics/answer/9823238).
 
 ## 1. Create a BigQuery Project (if you don't have one)
 
